img and resume layout

--- a/resume.html
+++ b/resume.html
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='resume.js'></script>
-</head>
-<body>
-
-    <div style="display: flex; flex-direction: column;">
-        <div style="display: flex; flex-direction: row;">
-            <p><b>Name</b></p>
-            <p>Super Petry</p>
-        </div>
-
+<div style="padding: 12px;">
+<div style="display: flex; flex-direction: row;">
+    <div style="width:50%; overflow: hidden; padding: 12px;">
+        <!-- <image src="testimg.jpg" style="width:100%; height:auto;"></image> -->
+        <canvas id="resumecanvas" style="width:100%; height:auto;"></canvas>
     </div>
+    <div style="width:50%; display: flex; flex-direction: row; flex-wrap: wrap; align-content:start; padding: 12px;">
+        <div style="width:50%"><p><b>Name</b></p></div>
+        <div style="width:50%"><p>Super Petry</p></div>
+        <div style="width:50%"><p><b>Age</b></p></div>
+        <div style="width:50%"><p>70</p></div>
+    </div>
+</div>
 
 
-
-
-
-
-
-
-
-
-</body>
-
-</html>
+<div style="padding: 12px;">
+    <p>long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph long paragraph</p>
+</div>
+</div>
